# Real-Time-Edge-Detection-Viewer-or-FLAM-Assignment

./: .gitignore  ADD_IMAGE_GUIDE.md  BUILD_FIX_COMPLETE.md  BUILD_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  CURRENT_ERROR_FIX.md  DO_THIS_NOW.md  DO_THIS_TO_FIX_BUILD.md  ERROR_FIXES.md  FIX_JAVA_VERSION_ERROR.md  FIX_NDK_ERROR.md  GITHUB_PAGES_DEPLOYMENT.md  INSTALLATION_GUIDE.md  NDK_QUICK_FIX.md  PROJECT_CHECKLIST.md  PROJECT_COMPLETE.md  PROJECT_DESCRIPTION.md  PROJECT_STRUCTURE.md  QUICK_FIX_REFERENCE.txt  QUICK_START.md  README.md  START_HERE.md  WEB_QUICK_START.md  WEB_REBUILD_GUIDE.md  WEB_VIEWER_COMPLETE.md  WEB_VIEWER_SETUP.md
.github/workflows/: deploy.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detector.cpp  gl_renderer.cpp  jni_utils.cpp
app/src/main/java/com/example/edgedetection/: GLRenderer.kt  MainActivity.kt  NativeWrapper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_foreground.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: README.md
gl/: ShaderUtil.h  Texture.h  TextureRenderer.h
gradle/wrapper/: gradle-wrapper.properties
jni/: EdgeDetector.h  JNIBridge.h
web/: README.md  index.html  package.json  tsconfig.json
web/src/: main.ts
